# DelaunayBrush

./: .gitignore  CMakeLists copy.txt  CMakeLists-debug.txt  CMakeLists.txt  CircumsphereDLL.cpp  CircumsphereDLL.h  README.md  circumcenter_cloud.ply  main copy.cpp  main.cpp  run.sh
02_marching_cube_dynamic/: CMakeLists.txt
02_marching_cube_dynamic/src/: CircumsphereDLL.cpp  main.cpp  main_old.cpp  scene.cpp  scene.hpp
02_marching_cube_dynamic/src/implicit_surface/: field_function.cpp  field_function.hpp  gui_helper.cpp  gui_helper.hpp  implicit_surface.cpp
Inputs_and_Results/Bonsai/: 01_Bonsai_Ribbons.ply
Inputs_and_Results/Chicken/: 01_Chicken_Ribbons.ply
Inputs_and_Results/Chili/: 01_Chili_Ribbons.ply
Inputs_and_Results/Couch/: 01_Couch_Ribbons.ply
Inputs_and_Results/Dolphin/: 01_Dolphin_Ribbons.ply
Inputs_and_Results/Flower/: 01_Flower_Ribbons.ply
Inputs_and_Results/Heart/: 01_Heart_Ribbons.ply
Inputs_and_Results/Mushroom/: 01_Mushroom_Ribbons.ply
Inputs_and_Results/Piggy_Bank/: 01_Piggy_Bank_Ribbons.ply
Inputs_and_Results/Pumpkin/: 01_Pumpkin_Ribbons.ply
Inputs_and_Results/Skull/: 01_Skull_Ribbons.ply
Inputs_and_Results/Stanford_Bunny/: 01_Stanford_Bunny_Ribbons.ply  01_Stanford_Bunny_Ribbons_new.ply
Inputs_and_Results/Stanford_Bunny/curves/100/: 01_Stanford_Bunny_Ribbons_filtered.ply  01_Stanford_Bunny_Ribbons_filtered_normals.ply  01_Stanford_Bunny_Ribbons_new_filtered.ply  01_Stanford_Bunny_Ribbons_new_filtered_normals.ply
Inputs_and_Results/Stanford_Bunny/curves/30/: 01_Stanford_Bunny_Ribbons_new_filtered.ply  01_Stanford_Bunny_Ribbons_new_filtered_normals.ply
Inputs_and_Results/Stanford_Bunny/curves/50/: 01_Stanford_Bunny_Ribbons_new_filtered.ply  01_Stanford_Bunny_Ribbons_new_filtered_normals.ply
Inputs_and_Results/Teddy_Bear/: 01_Teddy_Bear_Ribbons.ply
Inputs_and_Results/Tree/: 01_Tree_Ribbons.ply
Inputs_and_Results/Turtle/: 01_Turtle_Ribbons.ply
Inputs_and_Results/User_Study/User_01/: Cube_01_Ribbons.ply  Hemisphere_01_Ribbons.ply
Inputs_and_Results/User_Study/User_02/: Cube_01_Ribbons.ply  Hemisphere_01_Ribbons.ply
Inputs_and_Results/User_Study/User_03/: Cube_01_Ribbons.ply  Hemisphere_01_Ribbons.ply
Inputs_and_Results/User_Study/User_04/: Cube_01_Ribbons.ply  Hemisphere_01_Ribbons.ply
Inputs_and_Results/User_Study/User_05/: Cube_01_Ribbons.ply  Hemisphere_01_Ribbons.ply
Inputs_and_Results/Walking_Teapot/: 01_Walking_Teapot_Ribbons.ply
input-rib/: skeletal_wireframe.ply  skeletal_wireframe_normals.ply
python/: main copy.cpp  main.cpp  quad-riboon-to-vertex-with-normal.py  sparse-c.py  subset-of-ribbons.py
src/: CircumsphereDLL.cpp  CircumsphereDLL.h  debugIGL.cpp  main copy 2.cpp  main.cpp
